Syntax Analyzer/cool.output
Terminals unused in grammar

   LE
   ERROR
   "<-"


State 11 conflicts: 2 shift/reduce
State 18 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class ';'
    3           | class_list class ';'

    4 class: CLASS TYPEID '{' feature_list '}'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}'
    6      | error

    7 feature_list: /* empty */
    8             | feature ';'
    9             | feature_list feature ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expr
   13        | error

   14 formal_list: /* empty */
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 comma_expr_list: /* empty */
   19                | expr
   20                | comma_expr_list ',' expr

   21 expr_semi_list: expr ';'
   22               | expr_semi_list expr ';'
   23               | error ';'

   24 expr_let_part_1: LET expr_let_part_2

   25 expr_let_part_2: OBJECTID ':' TYPEID IN expr
   26                | OBJECTID ':' TYPEID ASSIGN expr IN expr
   27                | OBJECTID ':' TYPEID ',' expr_let_part_2
   28                | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let_part_2
   29                | error IN expr
   30                | error ',' expr_let_part_2

   31 expr_case_list: OBJECTID ':' TYPEID DARROW expr ';'
   32               | expr_case_list OBJECTID ':' TYPEID DARROW expr ';'

   33 expr: OBJECTID ASSIGN expr
   34     | expr '.' OBJECTID '(' comma_expr_list ')'
   35     | expr '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   36     | OBJECTID '(' comma_expr_list ')'
   37     | IF expr THEN expr ELSE expr FI
   38     | WHILE expr LOOP expr POOL
   39     | '{' expr_semi_list '}'
   40     | expr_let_part_1
   41     | CASE expr OF expr_case_list ESAC
   42     | NEW TYPEID
   43     | ISVOID expr
   44     | expr '+' expr
   45     | expr '-' expr
   46     | expr '*' expr
   47     | expr '/' expr
   48     | '~' expr
   49     | expr '<' expr
   50     | expr "<=" expr
   51     | expr '=' expr
   52     | NOT expr
   53     | '(' expr ')'
   54     | OBJECTID
   55     | INT_CONST
   56     | STR_CONST
   57     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 34 35 36 53
')' (41) 10 34 35 36 53
'*' (42) 46
'+' (43) 44
',' (44) 16 20 27 28 30
'-' (45) 45
'.' (46) 34 35
'/' (47) 47
':' (58) 10 11 12 17 25 26 27 28 31 32
';' (59) 2 3 8 9 21 22 23 31 32
'<' (60) 49
'=' (61) 51
'@' (64) 35
'{' (123) 4 5 10 39
'}' (125) 4 5 10 39
'~' (126) 48
error (256) 6 13 23 29 30
CLASS (258) 4 5
ELSE (259) 37
FI (260) 37
IF (261) 37
IN (262) 25 26 29
INHERITS (263) 5
LET (264) 24
LOOP (265) 38
POOL (266) 38
THEN (267) 37
WHILE (268) 38
CASE (269) 41
ESAC (270) 41
OF (271) 41
DARROW (272) 31 32
NEW (273) 42
ISVOID (274) 43
STR_CONST (275) 56
INT_CONST (276) 55
BOOL_CONST (277) 57
TYPEID (278) 4 5 10 11 12 17 25 26 27 28 31 32 35 42
OBJECTID (279) 10 11 12 17 25 26 27 28 31 32 33 34 35 36 54
ASSIGN (280) 12 26 28 33
NOT (281) 52
LE (282)
ERROR (283)
"<-" (285)
"<=" (286) 50


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
class_list (49)
    on left: 2 3, on right: 1 3
class (50)
    on left: 4 5 6, on right: 2 3
feature_list (51)
    on left: 7 8 9, on right: 4 5 9
feature (52)
    on left: 10 11 12 13, on right: 8 9
formal_list (53)
    on left: 14 15 16, on right: 10 16
formal (54)
    on left: 17, on right: 15 16
comma_expr_list (55)
    on left: 18 19 20, on right: 20 34 35 36
expr_semi_list (56)
    on left: 21 22 23, on right: 22 39
expr_let_part_1 (57)
    on left: 24, on right: 40
expr_let_part_2 (58)
    on left: 25 26 27 28 29 30, on right: 24 27 28 30
expr_case_list (59)
    on left: 31 32, on right: 32 41
expr (60)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55 56 57, on right: 10 12 19 20 21 22 25 26 28 29 31
    32 33 34 35 37 38 41 43 44 45 46 47 48 49 50 51 52 53


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error .

    $default  reduce using rule 6 (class)


state 2

    4 class: CLASS . TYPEID '{' feature_list '}'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: class_list .
    3 class_list: class_list . class ';'

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


state 5

    2 class_list: class . ';'

    ';'  shift, and go to state 9


state 6

    4 class: CLASS TYPEID . '{' feature_list '}'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class . ';'

    ';'  shift, and go to state 12


state 9

    2 class_list: class ';' .

    $default  reduce using rule 2 (class_list)


state 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}'

    TYPEID  shift, and go to state 13


state 11

    4 class: CLASS TYPEID '{' . feature_list '}'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 16
    feature       go to state 17


state 12

    3 class_list: class_list class ';' .

    $default  reduce using rule 3 (class_list)


state 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}'

    '{'  shift, and go to state 18


state 14

   13 feature: error .

    $default  reduce using rule 13 (feature)


state 15

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


state 16

    4 class: CLASS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 21

    feature  go to state 22


state 17

    8 feature_list: feature . ';'

    ';'  shift, and go to state 23


state 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 24
    feature       go to state 17


state 19

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 14 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


state 20

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 28


state 21

    4 class: CLASS TYPEID '{' feature_list '}' .

    $default  reduce using rule 4 (class)


state 22

    9 feature_list: feature_list feature . ';'

    ';'  shift, and go to state 29


state 23

    8 feature_list: feature ';' .

    $default  reduce using rule 8 (feature_list)


state 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}'
    9 feature_list: feature_list . feature ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 30

    feature  go to state 22


state 25

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


state 26

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


state 27

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


state 28

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 11 (feature)


state 29

    9 feature_list: feature_list feature ';' .

    $default  reduce using rule 9 (feature_list)


state 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' .

    $default  reduce using rule 5 (class)


state 31

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 35


state 32

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 36


state 33

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 37


state 34

   12 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 53


state 35

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


state 36

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 54


state 37

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


state 38

   37 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 55


state 39

   24 expr_let_part_1: LET . expr_let_part_2

    error     shift, and go to state 56
    OBJECTID  shift, and go to state 57

    expr_let_part_2  go to state 58


state 40

   38 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 59


state 41

   41 expr: CASE . expr OF expr_case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 60


state 42

   42 expr: NEW . TYPEID

    TYPEID  shift, and go to state 61


state 43

   43 expr: ISVOID . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 62


state 44

   56 expr: STR_CONST .

    $default  reduce using rule 56 (expr)


state 45

   55 expr: INT_CONST .

    $default  reduce using rule 55 (expr)


state 46

   57 expr: BOOL_CONST .

    $default  reduce using rule 57 (expr)


state 47

   33 expr: OBJECTID . ASSIGN expr
   36     | OBJECTID . '(' comma_expr_list ')'
   54     | OBJECTID .

    ASSIGN  shift, and go to state 63
    '('     shift, and go to state 64

    $default  reduce using rule 54 (expr)


state 48

   52 expr: NOT . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 65


state 49

   48 expr: '~' . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 66


state 50

   39 expr: '{' . expr_semi_list '}'

    error       shift, and go to state 67
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_semi_list   go to state 68
    expr_let_part_1  go to state 52
    expr             go to state 69


state 51

   53 expr: '(' . expr ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_let_part_1  go to state 52
    expr             go to state 70


state 52

   40 expr: expr_let_part_1 .

    $default  reduce using rule 40 (expr)


state 53

   12 feature: OBJECTID ':' TYPEID ASSIGN expr .
   34 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   35     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . "<=" expr
   51     | expr . '=' expr

    "<="  shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79

    $default  reduce using rule 12 (feature)


state 54

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 80


state 55

   34 expr: expr . '.' OBJECTID '(' comma_expr_list ')'
   35     | expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   37     | IF expr . THEN expr ELSE expr FI
   44     | expr . '+' expr
   45     | expr . '-' expr
   46     | expr . '*' expr
   47     | expr . '/' expr
   49     | expr . '<' expr
   50     | expr . "<=" expr
   51     | expr . '=' expr

    THEN  shift, and go to state 81
    "<="  shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '+'   shift, and go to state 74
    '-'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


state 56

   29 expr_let_part_2: error . IN expr
   30                | error . ',' expr_let_part_2

    IN   shift, and go to state 82
    ','  shift, and go to state 83


state 57

   25 expr_let_part_2: OBJECTID . ':' TYPEID IN expr
   26                | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   27                | OBJECTID . ':' TYPEID ',' expr_let_part_2
   28                | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let_part_2

    ':'  shift, and go to state 84


state 58

   24 expr_let_part_1: LET expr_let_part_2 .

    $default  reduce using rule 24 (expr_let_part_1)


state 59
